TODO
* add a more sophisticated day of the month check in date time values
* have API functions return 0 if value is not a valid date and time ?
* implement support for duration string

FAT date and time
* implement individual fat_date and fat_time support

Filetime

HFS date/time
* implement

NSF timedate
* add API functions

Unix timestamp
* implement

Deployment
* update manuals
* add macosx file
* add debian files

20100706
* updated common

20100628
* added extern definitions

20100627
* updated common, liberror, libcstring
* clean up

20100625
* fix in fallback print

20100624
* small changes

20100505
* updated configure.ac and added MAINTAINERCLEANFILES to Makefile.am files

20100502
* updated common, libcstring, liberror
* changed amount of in number of

20100416
* updated liberror

20100328
* added libcstring
* updated liberror
* removed common/narrow_string.h common/wide_string.h
* worked on libcstring support
* worked on msvscpp and codegear support

20100321
* small changes for msvscpp compilation

20100319
* worked on NSF timedate
* clean up of configure.ac

20100222
* email update
* updated common, liberror

20100105
* base16 fix

20100103
* 2010 update
* updated common, liberror
* removed macosx files (for now)
* updated include/types.h

20091217
* removed all rights reserved

20091214
* fixes for windows build

20091203
* updated common
* added UTF-16 and UTF-32 string functions

20091026
* changed common/endian.h into common/byte_stream.h
  this prevents possible name conflict with endian.h

20090908
* added filetime addition function

20090906
* Created intial version based on previous local libfdatetime
  and libbfio
* removed libuna
