@@ -30,14 +30,14 @@ typedef intptr_t libfdatetime_error_t;
  */
 enum LIBFDATETIME_ERROR_DOMAINS
 {
-	LIBFDATETIME_ERROR_DOMAIN_ARGUMENTS                = (int) 'a',
-	LIBFDATETIME_ERROR_DOMAIN_CONVERSION               = (int) 'c',
-	LIBFDATETIME_ERROR_DOMAIN_COMPRESSION              = (int) 'C',
-	LIBFDATETIME_ERROR_DOMAIN_IO                       = (int) 'I',
-	LIBFDATETIME_ERROR_DOMAIN_INPUT                    = (int) 'i',
-	LIBFDATETIME_ERROR_DOMAIN_MEMORY                   = (int) 'm',
-	LIBFDATETIME_ERROR_DOMAIN_OUTPUT                   = (int) 'o',
-	LIBFDATETIME_ERROR_DOMAIN_RUNTIME                  = (int) 'r',
+	LIBFDATETIME_ERROR_DOMAIN_ARGUMENTS			= (int) 'a',
+	LIBFDATETIME_ERROR_DOMAIN_CONVERSION			= (int) 'c',
+	LIBFDATETIME_ERROR_DOMAIN_COMPRESSION			= (int) 'C',
+	LIBFDATETIME_ERROR_DOMAIN_IO				= (int) 'I',
+	LIBFDATETIME_ERROR_DOMAIN_INPUT				= (int) 'i',
+	LIBFDATETIME_ERROR_DOMAIN_MEMORY			= (int) 'm',
+	LIBFDATETIME_ERROR_DOMAIN_OUTPUT			= (int) 'o',
+	LIBFDATETIME_ERROR_DOMAIN_RUNTIME			= (int) 'r',
 };
 
 /* The argument error codes
@@ -45,60 +45,63 @@ enum LIBFDATETIME_ERROR_DOMAINS
  */
 enum LIBFDATETIME_ARGUMENT_ERROR
 {
-	LIBFDATETIME_ARGUMENT_ERROR_GENERIC                = 0,
+	LIBFDATETIME_ARGUMENT_ERROR_GENERIC			= 0,
 
 	/* The argument contains an invalid value
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_INVALID_VALUE          = 1,
+	LIBFDATETIME_ARGUMENT_ERROR_INVALID_VALUE		= 1,
 
 	/* The argument contains a value less than zero
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_LESS_THAN_ZERO   = 2,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_LESS_THAN_ZERO	= 2,
 
 	/* The argument contains a value zero or less
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_ZERO_OR_LESS     = 3,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_ZERO_OR_LESS		= 3,
 
 	/* The argument contains a value that exceeds the maximum
 	 * for the specific type
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_EXCEEDS_MAXIMUM   = 4,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_EXCEEDS_MAXIMUM	= 4,
 
 	/* The argument contains a value that is too small
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_TOO_SMALL        = 5,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_TOO_SMALL		= 5,
 
 	/* The argument contains a value that is too large
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_TOO_LARGE        = 6,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_TOO_LARGE		= 6,
 
-	/* The argument contains a value that is out of range
+	/* The argument contains a value that is out of bounds
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_RANGE     = 7,
+	LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS		= 7,
 
 	/* The argument contains a value that is not supported
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_UNSUPPORTED_VALUE      = 8,
+	LIBFDATETIME_ARGUMENT_ERROR_UNSUPPORTED_VALUE		= 8,
 
 	/* The argument contains a value that conficts with another argument
 	 */
-	LIBFDATETIME_ARGUMENT_ERROR_CONFLICTING_VALUE      = 9
+	LIBFDATETIME_ARGUMENT_ERROR_CONFLICTING_VALUE		= 9
 };
+
+/* TODO deprecated remove after a while */
+#define LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_RANGE	LIBFDATETIME_ARGUMENT_ERROR_VALUE_OUT_OF_BOUNDS
 
 /* The conversion error codes
  * to signify errors regarding conversions
  */
 enum LIBFDATETIME_CONVERSION_ERROR
 {
-	LIBFDATETIME_CONVERSION_ERROR_GENERIC              = 0,
+	LIBFDATETIME_CONVERSION_ERROR_GENERIC			= 0,
 
 	/* The conversion failed on the input
 	 */
-	LIBFDATETIME_CONVERSION_ERROR_INPUT_FAILED         = 1,
+	LIBFDATETIME_CONVERSION_ERROR_INPUT_FAILED		= 1,
 
 	/* The conversion failed on the output
 	 */
-	LIBFDATETIME_CONVERSION_ERROR_OUTPUT_FAILED        = 2
+	LIBFDATETIME_CONVERSION_ERROR_OUTPUT_FAILED		= 2
 };
 
 /* The compression error codes
@@ -106,59 +109,62 @@ enum LIBFDATETIME_CONVERSION_ERROR
  */
 enum LIBFDATETIME_COMPRESSION_ERROR
 {
-	LIBFDATETIME_COMPRESSION_ERROR_GENERIC             = 0,
+	LIBFDATETIME_COMPRESSION_ERROR_GENERIC			= 0,
 
 	/* The compression failed
 	 */
-	LIBFDATETIME_COMPRESSION_ERROR_COMPRESS_FAILED     = 1,
+	LIBFDATETIME_COMPRESSION_ERROR_COMPRESS_FAILED		= 1,
 
-	/* The de/uncompression failed
+	/* The decompression failed
 	 */
-	LIBFDATETIME_COMPRESSION_ERROR_UNCOMPRESS_FAILED   = 2
+	LIBFDATETIME_COMPRESSION_ERROR_DECOMPRESS_FAILED	= 2
 };
+
+/* TODO deprecated remove after a while */
+#define LIBERROR_COMPRESSION_ERROR_UNCOMPRESS_FAILED	LIBERROR_COMPRESSION_ERROR_DECOMPRESS_FAILED
 
 /* The input/output error codes
  * to signify errors regarding input/output
  */
 enum LIBFDATETIME_IO_ERROR
 {
-	LIBFDATETIME_IO_ERROR_GENERIC                      = 0,
+	LIBFDATETIME_IO_ERROR_GENERIC				= 0,
 
 	/* The open failed
 	 */
-	LIBFDATETIME_IO_ERROR_OPEN_FAILED                  = 1,
+	LIBFDATETIME_IO_ERROR_OPEN_FAILED			= 1,
 
 	/* The close failed
 	 */
-	LIBFDATETIME_IO_ERROR_CLOSE_FAILED                 = 2,
+	LIBFDATETIME_IO_ERROR_CLOSE_FAILED			= 2,
 
 	/* The seek failed
 	 */
-	LIBFDATETIME_IO_ERROR_SEEK_FAILED                  = 3,
+	LIBFDATETIME_IO_ERROR_SEEK_FAILED			= 3,
 
 	/* The read failed
 	 */
-	LIBFDATETIME_IO_ERROR_READ_FAILED                  = 4,
+	LIBFDATETIME_IO_ERROR_READ_FAILED			= 4,
 
 	/* The write failed
 	 */
-	LIBFDATETIME_IO_ERROR_WRITE_FAILED                 = 5,
+	LIBFDATETIME_IO_ERROR_WRITE_FAILED			= 5,
 
 	/* Access denied
 	 */
-	LIBFDATETIME_IO_ERROR_ACCESS_DENIED                = 6,
+	LIBFDATETIME_IO_ERROR_ACCESS_DENIED			= 6,
 
 	/* The resource is invalid i.e. a missing file
 	 */
-	LIBFDATETIME_IO_ERROR_INVALID_RESOURCE             = 7,
+	LIBFDATETIME_IO_ERROR_INVALID_RESOURCE			= 7,
 
 	/* The ioctl failed
 	 */
-	LIBFDATETIME_IO_ERROR_IOCTL_FAILED                 = 8,
+	LIBFDATETIME_IO_ERROR_IOCTL_FAILED			= 8,
 
 	/* The unlink failed
 	 */
-	LIBFDATETIME_IO_ERROR_UNLINK_FAILED                = 9
+	LIBFDATETIME_IO_ERROR_UNLINK_FAILED			= 9
 };
 
 /* The input error codes
@@ -166,32 +172,24 @@ enum LIBFDATETIME_IO_ERROR
  */
 enum LIBFDATETIME_INPUT_ERROR
 {
-	LIBFDATETIME_INPUT_ERROR_GENERIC                   = 0,
+	LIBFDATETIME_INPUT_ERROR_GENERIC			= 0,
 
 	/* The input contains invalid data
 	 */
-	LIBFDATETIME_INPUT_ERROR_INVALID_DATA              = 1,
+	LIBFDATETIME_INPUT_ERROR_INVALID_DATA			= 1,
 
 	/* The input contains an unsupported signature
 	 */
-	LIBFDATETIME_INPUT_ERROR_SIGNATURE_MISMATCH        = 2,
+	LIBFDATETIME_INPUT_ERROR_SIGNATURE_MISMATCH		= 2,
 
 	/* A CRC in the input did not match
 	 */
-	LIBFDATETIME_INPUT_ERROR_CRC_MISMATCH              = 3,
+	LIBFDATETIME_INPUT_ERROR_CRC_MISMATCH			= 3,
 
 	/* A value in the input did not match a previously
 	 * read value or calculated value
 	 */
-	LIBFDATETIME_INPUT_ERROR_VALUE_MISMATCH            = 4,
-
-	/* The last segment file is missing from the input
-	 */
-	LIBFDATETIME_INPUT_ERROR_MISSING_LAST_SEGMENT_FILE = 5,
-
-	/* The last section is missing from the input
-	 */
-	LIBFDATETIME_INPUT_ERROR_MISSING_LAST_SECTION      = 6
+	LIBFDATETIME_INPUT_ERROR_VALUE_MISMATCH			= 4
 };
 
 /* The memory error codes
@@ -199,19 +197,19 @@ enum LIBFDATETIME_INPUT_ERROR
  */
 enum LIBFDATETIME_MEMORY_ERROR
 {
-	LIBFDATETIME_MEMORY_ERROR_GENERIC                  = 0,
+	LIBFDATETIME_MEMORY_ERROR_GENERIC			= 0,
 
 	/* There is insufficient memory available
 	 */
-	LIBFDATETIME_MEMORY_ERROR_INSUFFICIENT             = 1,
+	LIBFDATETIME_MEMORY_ERROR_INSUFFICIENT			= 1,
 
 	/* The memory failed to be copied
 	 */
-	LIBFDATETIME_MEMORY_ERROR_COPY_FAILED              = 2,
+	LIBFDATETIME_MEMORY_ERROR_COPY_FAILED			= 2,
 
 	/* The memory failed to be set
 	 */
-	LIBFDATETIME_MEMORY_ERROR_SET_FAILED               = 3
+	LIBFDATETIME_MEMORY_ERROR_SET_FAILED			= 3
 };
 
 /* The runtime error codes
@@ -219,70 +217,73 @@ enum LIBFDATETIME_MEMORY_ERROR
  */
 enum LIBFDATETIME_RUNTIME_ERROR
 {
-	LIBFDATETIME_RUNTIME_ERROR_GENERIC                 = 0,
+	LIBFDATETIME_RUNTIME_ERROR_GENERIC			= 0,
 
 	/* The value is missing
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_VALUE_MISSING           = 1,
+	LIBFDATETIME_RUNTIME_ERROR_VALUE_MISSING		= 1,
 
 	/* The value was already set
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_VALUE_ALREADY_SET       = 2,
+	LIBFDATETIME_RUNTIME_ERROR_VALUE_ALREADY_SET		= 2,
 
 	/* The creation and/or initialization of an internal structure failed
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_INITIALIZE_FAILED       = 3,
+	LIBFDATETIME_RUNTIME_ERROR_INITIALIZE_FAILED		= 3,
 
 	/* The resize of an internal structure failed
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_RESIZE_FAILED           = 4,
+	LIBFDATETIME_RUNTIME_ERROR_RESIZE_FAILED		= 4,
 
 	/* The free and/or finalization of an internal structure failed
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_FINALIZE_FAILED         = 5,
+	LIBFDATETIME_RUNTIME_ERROR_FINALIZE_FAILED		= 5,
 
 	/* The value could not be determined
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_GET_FAILED              = 6,
+	LIBFDATETIME_RUNTIME_ERROR_GET_FAILED			= 6,
 
 	/* The value could not be set
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_SET_FAILED              = 7,
+	LIBFDATETIME_RUNTIME_ERROR_SET_FAILED			= 7,
 
 	/* The value could not be appended/prepended
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_APPEND_FAILED           = 8,
+	LIBFDATETIME_RUNTIME_ERROR_APPEND_FAILED		= 8,
 
 	/* The value could not be copied
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_COPY_FAILED             = 9,
+	LIBFDATETIME_RUNTIME_ERROR_COPY_FAILED			= 9,
 
 	/* The value could not be removed
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_REMOVE_FAILED           = 10,
+	LIBFDATETIME_RUNTIME_ERROR_REMOVE_FAILED		= 10,
 
 	/* The value could not be printed
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_PRINT_FAILED            = 11,
+	LIBFDATETIME_RUNTIME_ERROR_PRINT_FAILED			= 11,
 
-	/* The value was out of range
+	/* The value was out of bounds
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_RANGE      = 12,
+	LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_BOUNDS		= 12,
 
 	/* The value exceeds the maximum for its specific type
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_VALUE_EXCEEDS_MAXIMUM   = 13,
+	LIBFDATETIME_RUNTIME_ERROR_VALUE_EXCEEDS_MAXIMUM	= 13,
 
 	/* The value is unsupported
 	 */
-	LIBFDATETIME_RUNTIME_ERROR_UNSUPPORTED_VALUE       = 14
+	LIBFDATETIME_RUNTIME_ERROR_UNSUPPORTED_VALUE		= 14
 };
+
+/* TODO deprecated remove after a while */
+#define LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_RANGE	LIBFDATETIME_RUNTIME_ERROR_VALUE_OUT_OF_BOUNDS
 
 /* The output error codes
  */
 enum LIBFDATETIME_OUTPUT_ERROR
 {
-	LIBFDATETIME_OUTPUT_ERROR_GENERIC                  = 0
+	LIBFDATETIME_OUTPUT_ERROR_GENERIC			= 0
 };
 
 #endif
